Lab3_FPGA_IP/.metadata/.plugins/org.eclipse.cdt.ui/niosLab.build.log
22:51:41 **** Incremental Build of configuration Nios II for project niosLab ****
make all 
Info: Building ../niosLab_bsp/
C:/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../niosLab_bsp/
[BSP build complete]
Info: Compiling hello_world.c to obj/default/hello_world.o
nios2-elf-gcc -xc -MP -MMD -c -I../niosLab_bsp//HAL/inc -I../niosLab_bsp/ -I../niosLab_bsp//drivers/inc  -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_SINGLE_THREADED -DALTERA_AVALON_JTAG_UART_SMALL    -O0 -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/hello_world.o hello_world.c
hello_world.c: In function 'main':
hello_world.c:13:42: error: 'PERIPHERAL_LED_0_BASE' undeclared (first use in this function)
   unsigned int *p_led = (unsigned int *) PERIPHERAL_LED_0_BASE;
                                          ^
hello_world.c:13:42: note: each undeclared identifier is reported only once for each function it appears in
hello_world.c:23:11: warning: implicit declaration of function 'usleep' [-Wimplicit-function-declaration]
           usleep(500000); // remover durante a simulação
           ^
make: *** [obj/default/hello_world.o] Error 1

22:51:42 Build Finished (took 1s.133ms)

